--- a/requirements.txt
+++ b/requirements.txt
@@ -1,235 +1,166 @@
-# This file may be used to create an environment using:
-# $ conda create --name <env> --file <this file>
-# platform: linux-64
-_libgcc_mutex=0.1=conda_forge
-_openmp_mutex=4.5=2_gnu
-alabaster=0.7.12=py_0
-anndata=0.8.0=pyhd8ed1ab_1
-arpack=3.7.0=hdefa2d7_2
-asttokens=2.0.8=pyhd8ed1ab_0
-babel=2.10.3=pyhd8ed1ab_0
-backcall=0.2.0=pyh9f0ad1d_0
-backports=1.0=py_2
-backports.functools_lru_cache=1.6.4=pyhd8ed1ab_0
-brotli=1.0.9=h166bdaf_7
-brotli-bin=1.0.9=h166bdaf_7
-brotlipy=0.7.0=py38h0a891b7_1004
-bzip2=1.0.6=3
-c-ares=1.18.1=h7f98852_0
-ca-certificates=2022.9.24=ha878542_0
-cached-property=1.5.2=hd8ed1ab_1
-cached_property=1.5.2=pyha770c72_1
-certifi=2022.9.24=pyhd8ed1ab_0
-cffi=1.15.1=py38h4a40e3a_0
-charset-normalizer=2.1.1=pyhd8ed1ab_0
-click=8.1.3=pypi_0
-colorama=0.4.5=pyhd8ed1ab_0
-commonmark=0.9.1=pypi_0
-contourpy=1.0.5=py38h43d8883_0
-cryptography=37.0.1=py38h9ce1e76_0
-cudatoolkit=11.7.0=hd8887f6_10
-cudnn=8.4.1.50=hed8a83a_0
-cycler=0.11.0=pyhd8ed1ab_0
-debugpy=1.6.3=py38hfa26641_0
-decorator=5.1.1=pyhd8ed1ab_0
-docker-pycreds=0.4.0=pypi_0
-docutils=0.19=py38h578d9bd_0
-entrypoints=0.4=pyhd8ed1ab_0
-executing=1.0.0=pyhd8ed1ab_0
-expat=2.4.9=h27087fc_0
-fastjsonschema=2.16.2=pypi_0
-font-ttf-dejavu-sans-mono=2.37=hab24e00_0
-font-ttf-inconsolata=3.000=h77eed37_0
-font-ttf-source-code-pro=2.038=h77eed37_0
-font-ttf-ubuntu=0.83=hab24e00_0
-fontconfig=2.13.1=h6c09931_0
-fonts-conda-forge=1=0
-fonttools=4.37.3=py38h0a891b7_0
-freetype=2.12.1=hca18f0e_0
-gensim=4.2.0=pypi_0
-gitdb=4.0.10=pypi_0
-gitpython=3.1.30=pypi_0
-glpk=5.0=h445213a_0
-gmp=6.2.1=h58526e2_0
-h5py=3.7.0=nompi_py38h045baee_101
-hdf5=1.12.2=nompi_h4df4325_100
-icu=70.1=h27087fc_0
-idna=3.4=pyhd8ed1ab_0
-igraph=0.9.10=ha1f048c_1
-igviz=0.4.0=pypi_0
-imagesize=1.4.1=pyhd8ed1ab_0
-importlib-metadata=4.12.0=pypi_0
-importlib-resources=5.9.0=pypi_0
-importlib_metadata=4.11.4=hd8ed1ab_0
-intel-openmp=2022.1.0=h9e868ea_3769
-ipykernel=6.15.3=pyh210e3f2_0
-ipython=8.5.0=pyh41d4057_1
-jedi=0.18.1=pyhd8ed1ab_2
-jinja2=3.1.2=pyhd8ed1ab_1
-joblib=1.2.0=pyhd8ed1ab_0
-jpeg=9e=h166bdaf_2
-jsonpickle=2.2.0=pypi_0
-jsonschema=4.16.0=pypi_0
-jupyter_client=7.3.5=pyhd8ed1ab_0
-jupyter_core=4.11.1=py38h578d9bd_0
-kaleido-core=0.2.1=h3644ca4_0
-keyutils=1.6.1=h166bdaf_0
-kiwisolver=1.4.4=py38h43d8883_0
-krb5=1.19.3=h08a2579_0
-lcms2=2.12=hddcbb42_0
-ld_impl_linux-64=2.36.1=hea4e1c9_2
-leidenalg=0.8.10=py38hfa26641_0
-lerc=4.0.0=h27087fc_0
-libblas=3.9.0=16_linux64_openblas
-libbrotlicommon=1.0.9=h166bdaf_7
-libbrotlidec=1.0.9=h166bdaf_7
-libbrotlienc=1.0.9=h166bdaf_7
-libcblas=3.9.0=16_linux64_openblas
-libcurl=7.83.1=h2283fc2_0
-libdeflate=1.14=h166bdaf_0
-libedit=3.1.20191231=he28a2e2_2
-libev=4.33=h516909a_1
-libffi=3.4.2=h7f98852_5
-libgcc-ng=12.1.0=h8d9b700_16
-libgfortran-ng=12.1.0=h69a702a_16
-libgfortran5=12.1.0=hdcd56e2_16
-libgomp=12.1.0=h8d9b700_16
-libiconv=1.16=h516909a_0
-liblapack=3.9.0=16_linux64_openblas
-libllvm11=11.1.0=hf817b99_3
-libnghttp2=1.47.0=hff17c54_1
-libnsl=2.0.0=h7f98852_0
-libopenblas=0.3.21=pthreads_h78a6416_3
-libpng=1.6.38=h753d276_0
-libprotobuf=3.20.1=h6239696_4
-libsodium=1.0.18=h36c2ea0_1
-libsqlite=3.39.3=h753d276_0
-libssh2=1.10.0=hf14f497_3
-libstdcxx-ng=12.1.0=ha89aaad_16
-libtiff=4.4.0=h55922b4_4
-libuuid=1.0.3=0
-libwebp-base=1.2.4=h166bdaf_0
-libxcb=1.13=h7f98852_1004
-libxml2=2.9.14=h22db469_4
-libzlib=1.2.12=h166bdaf_3
-llvm-openmp=14.0.4=he0ac6c6_0
-llvmlite=0.39.1=py38h38d86a4_0
-magma=2.5.4=h6103c52_2
-markupsafe=2.1.1=py38h0a891b7_1
-mathjax=2.7.7=ha770c72_3
-matplotlib-base=3.6.0=py38hb021067_0
-matplotlib-inline=0.1.6=pyhd8ed1ab_0
-matplotlib-venn=0.11.7=pypi_0
-metis=5.1.0=h58526e2_1006
-mkl=2022.1.0=hc2b9512_224
-mpfr=4.1.0=h9202a9a_1
-munkres=1.1.4=pyh9f0ad1d_0
-natsort=8.2.0=pyhd8ed1ab_0
-nbformat=5.6.0=pypi_0
-nccl=2.14.3.1=h0800d71_0
-ncurses=6.3=h27087fc_1
-nest-asyncio=1.5.5=pyhd8ed1ab_0
-networkx=2.4=pypi_0
-ninja=1.7.2=0
-node2vec=0.4.6=pypi_0
-nspr=4.32=h9c3ff4c_1
-nss=3.78=h2350873_0
-numba=0.56.2=py38h9a4aae9_1
-numpy=1.23.0=py38h3a7f9d9_0
-openjpeg=2.5.0=h7d73246_1
-openssl=3.0.5=h166bdaf_2
-packaging=21.3=pyhd8ed1ab_0
-pandas=1.5.0=py38h8f669ce_0
-parso=0.8.3=pyhd8ed1ab_0
-pathtools=0.1.2=pypi_0
-patsy=0.5.2=pyhd8ed1ab_0
-pexpect=4.8.0=pyh9f0ad1d_2
-pickleshare=0.7.5=py_1003
-pillow=9.2.0=py38ha3b2c9c_2
-pip=22.2.2=pyhd8ed1ab_0
-pkgutil-resolve-name=1.3.10=pypi_0
-plotly=5.3.1=pypi_0
-promise=2.3=pypi_0
-prompt-toolkit=3.0.31=pyha770c72_0
-protobuf=4.21.12=pypi_0
-psutil=5.9.2=py38h0a891b7_0
-pthread-stubs=0.4=h36c2ea0_1001
-ptyprocess=0.7.0=pyhd3deb0d_0
-pure_eval=0.2.2=pyhd8ed1ab_0
-pycparser=2.21=pyhd8ed1ab_0
-pygments=2.13.0=pyhd8ed1ab_0
-pynndescent=0.5.7=pyh6c4a22f_0
-pyopenssl=22.0.0=pyhd8ed1ab_1
-pyparsing=3.0.9=pyhd8ed1ab_0
-pyrsistent=0.18.1=pypi_0
-pysocks=1.7.1=pyha2e5f31_6
-python=3.8.12=h0744224_3_cpython
-python-dateutil=2.8.2=pyhd8ed1ab_0
-python-graphviz=0.20.1=pypi_0
-python-igraph=0.10.0=py38h3805f6d_1
-python-kaleido=0.2.1=pyhd8ed1ab_0
-python_abi=3.8=2_cp38
-pytz=2022.2.1=pyhd8ed1ab_0
-pyvis=0.3.0=pypi_0
-pyyaml=6.0=pypi_0
-pyzmq=24.0.1=py38hfc09fa9_0
-readline=8.1.2=h0f457ee_0
-requests=2.28.1=pyhd8ed1ab_1
-retrying=1.3.3=pypi_0
-rich=12.6.0=pypi_0
-scanpy=1.9.1=pyhd8ed1ab_0
-scikit-learn=1.1.2=py38h0b08f9b_0
-scipy=1.9.1=py38hea3f02b_0
-seaborn=0.12.0=hd8ed1ab_0
-seaborn-base=0.12.0=pyhd8ed1ab_0
-sentry-sdk=1.12.1=pypi_0
-session-info=1.0.0=pyhd8ed1ab_0
-setproctitle=1.3.2=pypi_0
-setuptools=65.3.0=pyhd8ed1ab_1
-shortuuid=1.0.11=pypi_0
-six=1.16.0=pyh6c4a22f_0
-sleef=3.5.1=h9b69904_2
-smart-open=6.2.0=pypi_0
-smmap=5.0.0=pypi_0
-snowballstemmer=2.2.0=pyhd8ed1ab_0
-sphinx=5.1.1=pyhd8ed1ab_1
-sphinxcontrib-applehelp=1.0.2=py_0
-sphinxcontrib-devhelp=1.0.2=py_0
-sphinxcontrib-htmlhelp=2.0.0=pyhd8ed1ab_0
-sphinxcontrib-jsmath=1.0.1=py_0
-sphinxcontrib-qthelp=1.0.3=py_0
-sphinxcontrib-serializinghtml=1.1.5=pyhd8ed1ab_2
-sqlite=3.39.3=h4ff8645_0
-stack_data=0.5.0=pyhd8ed1ab_0
-statsmodels=0.13.2=py38h71d37f0_0
-stdlib-list=0.7.0=py_2
-suitesparse=5.10.1=h9e50725_1
-tbb=2021.5.0=h924138e_5
-texttable=1.6.4=pyhd8ed1ab_0
-threadpoolctl=3.1.0=pyh8a188c0_0
-tk=8.6.12=h27826a3_0
-torch=1.12.1+cu116=pypi_0
-torch-cluster=1.6.0=pypi_0
-torch-geometric=2.1.0.post1=pypi_0
-torch-scatter=2.0.9=pypi_0
-torch-sparse=0.6.15=pypi_0
-torch-spline-conv=1.2.1=pypi_0
-torchaudio=0.12.1+cu102=pypi_0
-torchvision=0.13.1+cu116=pypi_0
-tornado=6.2=py38h0a891b7_0
-tqdm=4.64.1=pyhd8ed1ab_0
-traitlets=5.4.0=pyhd8ed1ab_0
-typing_extensions=4.3.0=pyha770c72_0
-umap-learn=0.5.3=py38h578d9bd_0
-unicodedata2=14.0.0=py38h0a891b7_1
-urllib3=1.26.11=pyhd8ed1ab_0
-wandb=0.13.7=pypi_0
-wcwidth=0.2.5=pyh9f0ad1d_2
-wheel=0.37.1=pyhd8ed1ab_0
-xorg-libxau=1.0.9=h7f98852_0
-xorg-libxdmcp=1.1.3=h7f98852_0
-xz=5.2.6=h166bdaf_0
-zeromq=4.3.4=h9c3ff4c_1
-zipp=3.8.1=pyhd8ed1ab_0
-zlib=1.2.12=h166bdaf_3
-zstd=1.5.2=h6239696_4
+alabaster==0.7.12
+alembic==1.8.1
+anndata==0.8.0
+astropy==2.0.3
+asttokens==2.0.8
+atomicwrites==1.3.0
+attrs==19.1.0
+autopage==0.5.1
+Babel==2.10.3
+backcall==0.2.0
+backports.functools-lru-cache==1.6.4
+boltons==19.1.0
+brotlipy==0.7.0
+cached-property==1.5.2
+certifi==2022.9.24
+cffi==1.15.1
+charset-normalizer==2.1.1
+click==8.1.3
+cliff==4.0.0
+cmaes==0.9.0
+cmd2==2.4.2
+colorama==0.4.5
+colorlog==6.7.0
+commonmark==0.9.1
+contextlib2==0.5.5
+contourpy==1.0.5
+cryptography==37.0.1
+cycler==0.11.0
+Cython==0.29.32
+debugpy==1.6.3
+decorator==5.1.1
+docker-pycreds==0.4.0
+docutils==0.19
+entrypoints==0.4
+executing==1.0.0
+fastjsonschema==2.16.2
+fonttools==4.37.3
+gensim==4.2.0
+gitdb==4.0.10
+GitPython==3.1.30
+graphviz==0.20.1
+greenlet==2.0.1
+h5py==3.7.0
+idna==3.4
+igraph==0.9.10
+igviz==0.5.0
+imagesize==1.4.1
+importlib-metadata==4.13.0
+importlib-resources==5.10.0
+ipykernel==6.15.3
+ipython==8.5.0
+jedi==0.18.1
+Jinja2==3.1.2
+joblib==1.2.0
+jsonpickle==2.2.0
+jsonschema==4.16.0
+jupyter_client==7.3.5
+jupyter_core==4.11.1
+kaleido==0.2.1
+kiwisolver==1.4.4
+leidenalg==0.8.10
+llvmlite==0.39.1
+Mako==1.2.4
+MarkupSafe==2.1.1
+matplotlib==3.6.0
+matplotlib-inline==0.1.6
+matplotlib-venn==0.11.7
+more-itertools==7.0.0
+munkres==1.1.4
+natsort==8.2.0
+nbformat==5.6.0
+nest-asyncio==1.5.5
+networkx==2.8.7
+node2vec==0.4.6
+numba==0.56.3
+numpy==1.23.0
+# optuna==3.0.3
+packaging==21.3
+pandas==1.5.0
+parso==0.8.3
+pathtools==0.1.2
+patsy==0.5.2
+pbr==5.11.0
+pexpect==4.8.0
+pickleshare==0.7.5
+Pillow==9.2.0
+pip==22.2.2
+pkgutil_resolve_name==1.3.10
+plotly==5.10.0
+pluggy==0.12.0
+prettytable==3.5.0
+promise==2.3
+prompt-toolkit==3.0.31
+protobuf==4.21.12
+psutil==5.9.2
+ptyprocess==0.7.0
+pure-eval==0.2.2
+py==1.8.0
+pycparser==2.21
+Pygments==2.13.0
+pynndescent==0.5.7
+pyOpenSSL==22.0.0
+pyparsing==3.0.9
+pyperclip==1.8.2
+pyrsistent==0.18.1
+PySocks==1.7.1
+pytest==4.6.2
+python-dateutil==2.8.2
+python-igraph==0.9.10
+python-louvain==0.16
+pytz==2022.2.1
+pyvis==0.3.0
+PyYAML==6.0
+pyzmq==24.0.1
+requests==2.28.1
+retrying==1.3.3
+rich==12.6.0
+scanpy==1.9.1
+scikit-learn==1.1.2
+scipy==1.9.1
+seaborn==0.11.2
+sentry-sdk==1.12.1
+session-info==1.0.0
+setproctitle==1.3.2
+setuptools==65.3.0
+shortuuid==1.0.11
+six==1.16.0
+smart-open==6.2.0
+smfishHmrf==1.3.3
+smmap==5.0.0
+snowballstemmer==2.2.0
+spaotsc==0.2
+Sphinx==5.1.1
+sphinxcontrib-applehelp==1.0.2
+sphinxcontrib-devhelp==1.0.2
+sphinxcontrib-htmlhelp==2.0.0
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-qthelp==1.0.3
+sphinxcontrib-serializinghtml==1.1.5
+SQLAlchemy==1.4.44
+stack-data==0.5.0
+statsmodels==0.13.2
+stdlib-list==0.7.0
+stevedore==4.1.1
+tenacity==8.1.0
+texttable==1.6.4
+threadpoolctl==3.1.0
+# torch==1.12.1+cu116
+# torch-cluster==1.6.0
+# torch-geometric==2.1.0.post1
+# torch-scatter==2.0.9
+# torch-sparse==0.6.15
+# torch-spline-conv==1.2.1
+# torchaudio==0.12.1
+# torchvision==0.13.1
+tornado==6.2
+tqdm==4.64.1
+traitlets==5.4.0
+typing_extensions==4.3.0
+umap-learn==0.5.3
+unicodedata2==14.0.0
+urllib3==1.26.11
+wandb==0.13.7
+wcwidth==0.1.7
+wheel==0.37.1
+zipp==3.10.0
